[package]
name = "seppun-kb"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
x11rb = { version = "0.13.1", features = [
    "all-extensions",
    "allow-unsafe-code",
    "xkb",
] }
xkbcommon = { version = "0.8.0", features = ["x11"] }
daemonize = "*"
signal-hook = "0.3"
clap = { version = "4.5.23", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }
shlex = "1.3.0"
